0025024: BSplCLib::PrepareInsertKnots reports incorrect number of poles

Added test bugs fclasses bug25024